add new api to get token
